# customfirmware

./: CMakeLists.txt  README.md  name: Build Custom Firmware
.github/workflows/: main.yml
applications_user/vibe_os/: application.fam  vibe_os.c
applications_user/vibe_os2/: application.fam
docs/: ADVANCED_APPS.md  APPS.md  ESP32_WIRESHARK.md  NRF24_TOOLS.md
examples/: simple_app.c  theme_example.c
src/: main.c
src/apps/: advanced_apps.c  advanced_apps.h  app_launcher.c  app_launcher.h  community_apps.h  esp32_tools.c  esp32_tools.h  esp32_wireshark.c  esp32_wireshark.h  momentum_apps.h  nrf24_tools.c  nrf24_tools.h
src/ui/: main.c  ui.c  ui.h
src/ui/views/: apps_view.c  apps_view.h  main_view.c  main_view.h  settings_view.c  settings_view.h
